--- a/src/Fleximi.NetStandard/Fleximi.NetStandard.csproj
+++ b/src/Fleximi.NetStandard/Fleximi.NetStandard.csproj
@@ -1,13 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Description>Fleximi NetStandard for Full Net Framework</Description>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <MinClientVersion>3.6</MinClientVersion>
+    <AssemblyName>Fleximi.NetStandard</AssemblyName>
+    <RootNamespace>Fleximi.NetStandard</RootNamespace>
+    <PackageTags>Crystal Reports;crystal-reports;reports</PackageTags>
+    <PackageProjectUrl>https://github.com/gerardvidamo/Fleximi.NetStandard</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>git://github.com/gerardvidamo/Fleximi.NetStandard</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>  
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />  
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.2.0" />
-    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
     <!-- .NET 4.6.1 references, compilation flags and build options -->
     <Reference Include="net461\CrystalDecisions.CrystalReports.Design.dll" />
     <Reference Include="net461\CrystalDecisions.CrystalReports.Engine.dll" />
